Communities controller model and Interactors setted

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
   </head>
 
   <body>
+    <div>
+      <% flash.each do |type, msg| %>
+        <div class="flash-<%=type%>">
+          <%= msg %>
+        </div>
+      <% end %>
+    </div>
+    
     <%= yield %>
   </body>
 </html>
