frontend init with boostrap 5

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+
+    <%= render "layouts/nav" %>
     <div>
       <% flash.each do |type, msg| %>
         <div class="flash-<%=type%>">
