--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,10 @@
-main.w-100.h-100.pt-5
-    .container.d-flex[style="background-image: url("= image_url logo.png");"]
-        div.max-width-25
-            h1 Hello world
-            p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis obcaecati eum repudiandae!
-            button sample
-            button sample2
-        div
-            = image_tag "logo.png", class:"w-100 image-fluid"
+<main class="d-flex h-100 align-items-center">
+    <div class="container">
+        <h1 class="text-white">Share or Join a Community!</h1>
+        <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti praesentium ut laboriosam.</p>
+        <div class="text-white">
+            <button class="josh-btn">uno</button>
+            <button class="josh-btn">dos</button>
+        </div>
+    </div>
+</main>
