--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,8 @@
         </div>
       <% end %>
     </div>
-    
-    <%= yield %>
+    <div class="main-banner" style="background-image: url('<%= image_url 'hero.png' %>');">
+      <%= yield %>
+    </div>
   </body>
 </html>
