--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,23 +1,23 @@
-<nav class="position-absolute to-0 left-0 navbar navbar-expand-lg">
+<nav class="position-absolute top-0 left-0 navbar navbar-expand-lg">
   <div class="container-fluid">
-    <%= link_to "Communities", root_path, class: "navbar-brand" %>
+    <%= link_to "Communities", root_path, class: "navbar-brand text-white" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="nav-collapse-e collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <%= link_to "Communities", communities_path, class: "nav-link"%>
+          <%= link_to "Communities", communities_path, class: "nav-link text-white-50"%>
         </li>
         <% if allowed_to?(:new?, with: UserPolicy)%>
           <li class="nav-item">
-            <%= link_to "Sign up", register_path, class: "nav-link" %>
+            <%= link_to "Sign up", register_path, class: "nav-link text-white-50" %>
           </li>
         <% end%>
 
         <% if allowed_to?(:new?, with: SessionPolicy) %>
           <li class="nav-item">
-            <%= link_to "Log in", login_path, class: "nav-link" %>
+            <%= link_to "Log in", login_path, class: "nav-link text-white-50" %>
           </li>
         <% end %>
       </ul>
