--- a/app/views/communities/new.html.slim
+++ b/app/views/communities/new.html.slim
@@ -1,4 +1,6 @@
-h1
+h1.text-white.text-center.mt-5
     ' Create a new community 
 
-= render "form", community: @community
+.h-75.d-flex.align-items-center.justify-content-center
+    .rounded.form-bg
+        = render "form", community: @community
