--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,8 @@
  */
 @import "bootstrap";
 @import "nav";
+@import "commnunities-index";
+@import "pagination";
 
 .flash-notice{
     color: green;
@@ -24,11 +26,11 @@
 
 .josh-btn{
     padding: 5px 20px;
-    background: blue;
+    background: #2ea043;
     color: #fff;
     border-radius: 10px;
     font-size: 18px;
-    border: 2px solid blue;
+    border: 2px solid #2ea043;
     transition: all .5s ease;
 }
   
@@ -40,10 +42,22 @@
     background-size: cover;
     background-position: left;
     height: 100vh;
+    overflow-y: scroll;
+    &::-webkit-scrollbar{
+        display: none;
+    }
 }
 
-// `xs` returns only a ruleset and no media query
-// ... { ... }
+textarea{
+    max-height: 200px;
+    min-height: 100px; 
+    padding: 10px 5px;
+}
+
+.form-bg{
+    background-color: rgba(100, 100, 100, 0.541);
+    padding: 50px; 
+}
 
 // `sm` applies to x-small devices (portrait phones, less than 576px)
 @media (max-width: 575.98px) { 
