--- a/app/views/communities/_form.html.slim
+++ b/app/views/communities/_form.html.slim
@@ -1,12 +1,12 @@
-= form_with model: community do |f|
+= form_with model: community, class: "form" do |f|
+    .form-group
+        = f.label :name, class: "form-label text-white"
+        = f.text_field :name, class: "form-control"
+    .form-group
+        = f.label :description, class: "form-label text-white mt-2"
+        = f.text_area :description, class: "form-control"
+    .form-group
+        = f.label :url, class: "form-label text-white mt-2"
+        = f.text_field :url, class: "form-control"
     div
-        = f.label :name
-        = f.text_field :name
-    div
-        = f.label :description
-        = f.text_field :description
-    div
-        = f.label :url
-        = f.text_field :url
-    div
-        = f.submit
+        = f.submit class: "mt-3 josh-btn"
