--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="position-absolute top-0 left-0 navbar navbar-expand-lg">
+<nav class="bg-black navbar navbar-expand-lg">
   <div class="container-fluid">
     <%= link_to "Communities", root_path, class: "navbar-brand text-white" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
