--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,4 +1,57 @@
-.navbar-toggler-icon{
-    outline: none;
-    border: none;
+
+#toggle-bar-icon{
+    width:50px;
+    border-radius: 5px;
+    height: 50px;
+    padding: 10px;
+    background: rgba(221, 221, 221, 0.705);
+    position: relative;
+}
+  
+#toggle-bar-line{
+    position: absolute;
+    border-radius: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 65%;
+    height: 3px;
+    background: #111;
+}
+  
+#toggle-bar-icon::before{
+    content: '';
+    position: absolute;
+    top: 20%;
+    width: 65%;
+    height: 3px;
+    border-radius: 5px;
+    background: #111;
+}
+  
+#toggle-bar-icon::after{
+    content: '';
+    border-radius: 5px;
+    position: absolute;
+    bottom: 20%;
+    width: 65%;
+    height: 3px;
+    background: #111;
+}
+  
+#toggle-bar-icon:hover{
+    animation-name: rotate;
+    animation-duration: .7s;
+    animation-fill-mode:forwards;
+    animation-iteration-count: 2;
+    animation-direction: alternate;
+   
+}
+  
+@keyframes rotate{
+    from{
+        transform: rotate(0)
+    }
+    to{
+        transform: rotate(90deg)
+    }
 }
