--- a/app/views/communities/_aside.html.slim
+++ b/app/views/communities/_aside.html.slim
@@ -1,3 +1,4 @@
 div.p-4.bg-white.mb-5
         h3 Sort by:
-        = link_to "Name", sort: "name"
+        = link_to "Name", sort: "name"       
+        = link_to "creation", sort: "created_at"
