--- a/app/views/communities/_form.html.slim
+++ b/app/views/communities/_form.html.slim
@@ -8,5 +8,8 @@
     .form-group
         = f.label :url, class: "form-label text-white mt-2"
         = f.text_field :url, class: "form-control"
+    .form-group
+        = f.label :category, class: "form-label text-white mt-3"
+        = f.select :category_id, categories.pluck(:name, :id), {} , { class: "form-control" }
     div
         = f.submit class: "mt-3 josh-btn"
