flash messages animation and styles added, and solve for render :new unprocessable_entity, validations in /register

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 @import "commnunities-index";
 @import "pagination";
 @import "nav";
+@import "validations-handler";
 
 .flash-notice{
     color: green;
