--- a/app/views/communities/index.html.slim
+++ b/app/views/communities/index.html.slim
@@ -1,19 +1,5 @@
 
-h1.text-center.text-white.pt-5
+h1.text-center.py-5
     ' Find more communities!
 
-.container.d-flex.justify-content-evenly.mt-5.gap-5.responsive-c
-    div
-       
-        .communities.container
-            - @communities.each do |community|
-                article.community.p-5.text-white.rounded.box-shadow
-                    h1.text-center 
-                        = community.name
-                    button.btn.btn-info.disabled
-                        = community.category.name
-        .pags.my-3
-            = paginate @communities
-    
-    = render "aside"
-        
+= render "display", communities: @communities, query: @q, categories: @categories
