--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
 
     <%= render "layouts/nav" %>
-    <div class="main-banner" style="background-image: url('<%= image_url 'hero.png' %>');">
+    <div class="main-banner">
       <div>
         <% flash.each do |type, msg| %>
           <div class="container">
