--- a/app/views/communities/edit.html.slim
+++ b/app/views/communities/edit.html.slim
@@ -4,4 +4,4 @@ h1.text-white.text-center.mt-5
 
 .h-75.d-flex.justify-content-center.align-items-center
     .form-bg.rounded
-        = render "form", community: @community
+        = render "form", community: @community, categories: @categories
