--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -9,18 +9,23 @@
         <li class="nav-item">
           <%= link_to "Communities", communities_path, class: "nav-link text-white-50"%>
         </li>
+        <li class="nav-item">
+          <%= link_to "Categories", categories_path, class: "nav-link text-white-50" %>
+        </li>
         <% if allowed_to?(:new?, with: UserPolicy)%>
           <li class="nav-item">
             <%= link_to "Sign up", register_path, class: "nav-link text-white-50" %>
-          </li>
-        <% end%>
-
-        <% if allowed_to?(:new?, with: SessionPolicy) %>
+          </li>     
           <li class="nav-item">
             <%= link_to "Log in", login_path, class: "nav-link text-white-50" %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "log out", login_path, data: { turbo_method: :delete } , class: "nav-link text-white-50" %>
           </li>
         <% end %>
       </ul>
     </div>
   </div>
 </nav>
+
