--- a/app/views/communities/index.html.slim
+++ b/app/views/communities/index.html.slim
@@ -1,5 +1,5 @@
 
-h1.text-center.py-5
+h1.text-center.py-5.text-white
     ' Find more communities!
 
 = render "display", communities: @communities, query: @q, categories: @categories
