--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -6,6 +6,14 @@
       button.josh-btn(href="#") Discover Groups
       button.josh-btn(href="#") Create Your Own
 
+= search_form_for @q do |form|
+  div
+    = form.label :name_cont
+    = form.search_field :name_cont
+  div
+    = form.submit
+
+
 .container-fluid.bg-white.py-5
   .row
     .col-md-4
