--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="bg-black navbar navbar-expand-lg">
+<nav class="jc-primary navbar navbar-expand-lg">
   <div class="container-fluid">
     <%= link_to "Communities", root_path, class: "navbar-brand text-white" %>
     <div id="toggle-bar-icon" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,6 +6,9 @@
     </div>
     <div class="nav-collapse-e collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
+        <li class="nav-item">
+          <%= link_to "Publish a community", new_community_path, class: "nav-link text-white-50" %>
+        </li>
         <li class="nav-item">
           <%= link_to "Communities", communities_path, class: "nav-link text-white-50"%>
         </li>
