--- a/app/views/communities/index.html.slim
+++ b/app/views/communities/index.html.slim
@@ -2,4 +2,4 @@
 h1.text-center.py-5.text-white
     ' Find more communities!
 
-= render "display", communities: @communities, query: @q, categories: @categories
+= render "display"
