faker added and communities controller refactored

--- a/app/views/communities/new.html.slim
+++ b/app/views/communities/new.html.slim
@@ -3,4 +3,4 @@ h1.text-white.text-center.mt-5
 
 .h-75.d-flex.align-items-center.justify-content-center
     .rounded.form-bg.jc-third
-        = render "form", community: @community, categories: @categories
+        = render "form"
