--- a/app/views/communities/edit.html.slim
+++ b/app/views/communities/edit.html.slim
@@ -1,7 +1,7 @@
 h1.text-white.text-center.mt-5
-    ' Edit your community: 
-    = @community.name
+    ' Edit your community:
+    = community.name
 
 .h-75.d-flex.justify-content-center.align-items-center
     .form-bg.rounded
-        = render "form", community: @community, categories: @categories
+        = render "form"
