--- a/app/views/communities/show.html.slim
+++ b/app/views/communities/show.html.slim
@@ -2,11 +2,11 @@
   img[src="https://icatcare.org/app/uploads/2018/07/Thinking-of-getting-a-cat.png" class="card-img s-img"]
   .filter-made
   h1.s-text.p-3.rounded
-    = @community.name
+    = community.name
 
 div
     p
         ' find more
-        = @community.description
+        = community.description
 
-= link_to "Delete This community", community_path(@community), data:{ turbo_method: :delete }
+= link_to "Delete This community", community_path(community), data:{ turbo_method: :delete }
