--- a/app/views/communities/index.html.slim
+++ b/app/views/communities/index.html.slim
@@ -1,5 +1,5 @@
+= turbo_frame_tag "categories" do
+    h1
+        ' Find more communities!
 
-h1.text-center.py-5.text-white
-    ' Find more communities!
-
-= render "display"
+    = render "display", query: q
