--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -7,12 +7,15 @@
   font-family: 'Montserrat', sans-serif;
   font-family: 'Signika Negative', sans-serif;
 }
-/*
 
-@layer components {
+textarea {
+  max-height: 200px;
+  min-height: 60px;
+}
+
+
+/* @layer components {
   .btn-primary {
     @apply py-2 px-4 bg-blue-200;
   }
-}
-
-*/
+} */
