--- a/app/views/communities/_form.html.slim
+++ b/app/views/communities/_form.html.slim
@@ -1,17 +1,17 @@
-= form_with model: community, class: "form" do |f|
+= form_with model: community do |f|
     - if community.errors.any?
         h1 There are some mistakes
     .form-group
-        = f.label :name, class: "form-label text-white"
-        = f.text_field :name, class: "form-control"
+        = f.label :name, class: label_class
+        = f.text_field :name, class: input_class
     .form-group
-        = f.label :description, class: "form-label text-white mt-2"
-        = f.text_area :description, class: "form-control"
+        = f.label :description, class: label_class
+        = f.text_area :description, class: input_class
     .form-group
-        = f.label :url, class: "form-label text-white mt-2"
-        = f.text_field :url, class: "form-control"
+        = f.label :url, class: label_class
+        = f.text_field :url, class: input_class
     .form-group
-        = f.label :category, class: "form-label text-white mt-3"
-        = f.select :category_id, categories.pluck(:name, :id), {} , { class: "form-control" }
-    div
-        = f.submit class: "mt-3 josh-btn"
+        = f.label :category, class: label_class
+        = f.select :category_id, categories.pluck(:name, :id), {} , { class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" }
+    div class="my-4"
+        = f.submit class: button_class
