--- a/app/views/communities/new.html.slim
+++ b/app/views/communities/new.html.slim
@@ -1,6 +1,7 @@
-h1.text-white.text-center.mt-5
-    ' Create a new community
+div class="py-4 bg-slate-800 min-h-[600px] sm:min-h-[700px] flex flex-col sm:flex-row gap-2 items-center justify-center"
+    div class="relative z-20 p-8 shadow-lg bg-white rounded-lg"
+        h1 class="text-3xl text-center my-2"
+            ' Create a new community
 
-.h-75.d-flex.align-items-center.justify-content-center
-    .rounded.form-bg.jc-third
         = render "form"
+    div class="relative z-0 hidden sm:block right-10 p-8 shadow-lg bg-[#ffffffcf] rounded-lg w-[325px] h-[425px]"
