--- a/app/views/layouts/_nav.html.slim
+++ b/app/views/layouts/_nav.html.slim
@@ -1,19 +1,18 @@
-div class="flex text-white bg-slate-800 flex-col gap-3 sm:flex-row justify-around items-center py-[25px]"
-  h1 class="text-2xl font-bold"
-    | Logo
+div class="flex sticky z-20 top-0 text-white bg-slate-800 flex-col gap-3 sm:flex-row justify-around items-center py-[25px]"
+  = link_to "Logo", root_path, class: "text-2xl font-bold"
   ul class="flex gap-4"
     li 
       = link_to "Publish a community", new_community_path, class: "hover:underline"
     li 
       = link_to "Communities", communities_path, class: "hover:underline"
-      - if allowed_to?(:new?, with: UserPolicy)
-        li 
-          = link_to "Sign up", register_path, class: "hover:underline"
-        li 
-          = link_to "Log in", login_path, class: "hover:underline"
-      -else
-        li 
-          = link_to "log out", login_path, data: { turbo_method: :delete, turbo_confirm: "Are you sure to log out?" }, class: "hover:underline"
+    - if allowed_to?(:new?, with: UserPolicy)
+      li 
+        = link_to "Sign up", register_path, class: "hover:underline"
+      li 
+        = link_to "Log in", login_path, class: "hover:underline"
+    -else
+      li 
+        = link_to "log out", login_path, data: { turbo_method: :delete, turbo_confirm: "Are you sure to log out?" }, class: "hover:underline"
 
   div class="hidden sm:block"
     = link_to "Get Started", communities_path , class: "#{button_class} relative z-50" 
