--- a/app/views/communities/index.html.slim
+++ b/app/views/communities/index.html.slim
@@ -1,5 +1,5 @@
-= turbo_frame_tag "categories" do
-    h1
-        ' Find more communities!
-
-    = render "display", query: q
+div class="bg-slate-800"
+    = turbo_frame_tag "categories" do
+        h1
+            ' Find more communities!
+        = render "display", query: q
