--- a/app/views/layouts/_nav.html.slim
+++ b/app/views/layouts/_nav.html.slim
@@ -1,4 +1,4 @@
-div class="flex sticky z-20 top-0 text-white bg-slate-800 flex-col gap-3 sm:flex-row justify-around items-center py-[25px]"
+div class="flex sticky z-20 top-0 text-white bg-gradient-to-br from-slate-700 to-slate-800 flex-col gap-3 sm:flex-row justify-around items-center py-[25px]"
   = link_to "Logo", root_path, class: "text-2xl font-bold"
   ul class="flex gap-4"
     li 
