--- a/app/views/categories/show.html.slim
+++ b/app/views/categories/show.html.slim
@@ -1,6 +1,7 @@
 = turbo_frame_tag "categories"
-    h1.text-center.m-5
-        = @category.name
-    div class="josh-btn"
-        = link_to "all", communities_path
-    = render "communities/display", communities: @communities, query: @q, categories: @categories
+    div class="flex justify-center items-center gap-[15px] flex-col pt-5 bg-slate-800"
+        h1 class="pt-4 text-4xl text-white"
+            = @category.name
+        div
+            = link_to "list all", communities_path, class: "text-white hover:underline"
+        = render "communities/display", communities: @communities, query: @q, categories: @categories
