--- a/app/views/communities/_display.html.slim
+++ b/app/views/communities/_display.html.slim
@@ -2,9 +2,9 @@
     = f.search_field :name_cont, class: "rounded px-5 py-3", placeholder: "Search a community!"
     = f.submit "search", class: "bg-blue-500 hover:cursor-pointer text-white rounded py-3 px-2"
 div class="relative flex-col"
-    button class="text-white my-3" id="category-btn"
+    button class="text-white my-3" data-controller="communities" id="category-btn" data-action="communities#dropdown"
         | Find By Categories       
-    div class="rounded absolute max-h-[350px] overflow-y-scroll bg-slate-300 top-100 w-[200%] right-[-50%]"
+    div id="categories-dropdown" class="hidden rounded absolute max-h-[350px] overflow-y-scroll bg-slate-300 top-100 w-[200%] right-[-50%]"
         ul class="flex flex-col"
             - categories.each do |category|
                 li
