--- a/app/views/communities/_form.html.slim
+++ b/app/views/communities/_form.html.slim
@@ -1,4 +1,4 @@
-= form_with model: community do |f|
+= form_with model: community, class: "flex flex-col gap-2" do |f|
     - if community.errors.any?
         h1 There are some mistakes
     .form-group
@@ -9,9 +9,9 @@
         = f.text_area :description, class: input_class
     .form-group
         = f.label :url, class: label_class
-        = f.text_field :url, class: input_class
+        = f.url_field :url, class: input_class
     .form-group
         = f.label :category, class: label_class
-        = f.select :category_id, categories.pluck(:name, :id), {} , { class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" }
+        = f.select :category_id, categories.pluck(:name, :id), {} , { class: "border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:border-gray-600 dark:placeholder-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500" }
     div class="my-4"
         = f.submit class: button_class
