--- a/app/views/communities/_display.html.slim
+++ b/app/views/communities/_display.html.slim
@@ -3,12 +3,12 @@
     = f.submit "search", class: "bg-blue-500 hover:cursor-pointer text-white rounded py-3 px-2"
 div class="relative flex-col"
     button class="text-white my-3" data-controller="communities" id="category-btn" data-action="communities#dropdown"
-        | Find By Categories       
-    div id="categories-dropdown" class="hidden rounded absolute max-h-[350px] overflow-y-scroll bg-slate-300 top-100 w-[200%] right-[-50%]"
+        | Find By Categories
+    div id="categories-dropdown" class="hidden rounded absolute max-h-[350px] z-20 overflow-y-scroll bg-white top-100 w-[200%] right-[-50%]"
         ul class="flex flex-col"
             - categories.each do |category|
                 li
-                    = link_to category.name, category_path(category), class: "block hover:bg-slate-200 py-2 px-[15px]"
+                    = link_to category.name, category_path(category), class: "block hover:bg-slate-100 py-2 px-[15px]"
 div class="mt-10"
     div class="flex flex-wrap gap-4"
         - communities.each do |community|
