--- a/app/views/layouts/_nav.html.slim
+++ b/app/views/layouts/_nav.html.slim
@@ -13,6 +13,7 @@ div class="flex sticky z-20 top-0 text-white bg-gradient-to-br from-slate-700 to
     -else
       li 
         = link_to "log out", login_path, data: { turbo_method: :delete, turbo_confirm: "Are you sure to log out?" }, class: "hover:underline"
-
+    - if current_user.admin?
+        = link_to "admin", admin_communities_path, class: "hover:underline"
   div class="hidden sm:block"
     = link_to "Get Started", communities_path , class: "#{button_class} relative z-50" 
