--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="min-h-100">
+  <body class="min-h-screen bg-slate-800">
     <%= render "layouts/nav" %>
     <%= render "layouts/flash" %>
     <%= yield %>
