--- a/app/views/communities/index.html.slim
+++ b/app/views/communities/index.html.slim
@@ -1,6 +1,5 @@
-div class="bg-slate-800"
-    = turbo_frame_tag "categories" do
-        div class="flex justify-center items-center flex-col pt-5"
-            h1 class="py-4 text-4xl text-white"
-                ' Find more communities!
-            = render "display", query: q
+= turbo_frame_tag "categories" do
+    div class="flex justify-center items-center flex-col pt-5" data-controller="communities"
+        h1 class="py-4 text-4xl text-white"
+            ' Find more communities!
+        = render "display", query: q
