--- a/app/views/communities/show.html.slim
+++ b/app/views/communities/show.html.slim
@@ -1,12 +1,24 @@
-.s-container
-  img[src="https://icatcare.org/app/uploads/2018/07/Thinking-of-getting-a-cat.png" class="card-img s-img"]
-  .filter-made
-  h1.s-text.p-3.rounded
+div class="text-white max-w-xl m-auto flex flex-col my-5 h-full justify-center gap-[20px] my-[50px]"
+  h1 class="text-center text-3xl font-bold"
     = community.name
-
-div
-    p
-        ' find more
-        = community.description
-
-= link_to "Delete This community", community_path(community), data:{ turbo_method: :delete }
+  div
+      p
+          = community.description
+  table class="border"
+    thead class="border"
+      tr
+        th class="border"
+          | Category
+        th class="border"
+          | Created
+    tbody class="border"
+      tr
+        td class="border text-center"
+          = community.category.name
+        td class="border text-center"
+          = time_ago_in_words(community.created_at) + " ago"
+    
+  div class="flex gap-3 flex-row-reverse"
+    - if allowed_to?(:destroy?, community)
+      = link_to "Delete This community", community_path(community), data:{ turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "bg-red-500 py-3 px-4 rounded-lg inline-block"
+    = link_to "Join", community.url, class: "bg-blue-500 py-3 px-4 rounded-lg inline-block", target: "_blank"
