--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="bg-slate-800 sticky bottom-0">
+<footer class="bg-slate-800">
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
         <div class="flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between">
             <div>
