added social enum to COmmunity model

--- a/app/views/communities/edit.html.slim
+++ b/app/views/communities/edit.html.slim
@@ -1,7 +1,6 @@
-h1.text-white.text-center.mt-5
+h1 class=""
     ' Edit your community:
     = community.name
 
-.h-75.d-flex.justify-content-center.align-items-center
-    .form-bg.rounded
+
         = render "form"
