--- a/app/views/communities/_form.html.slim
+++ b/app/views/communities/_form.html.slim
@@ -1,6 +1,4 @@
 = form_with model: community, class: "flex flex-col gap-2" do |f|
-    - if community.errors.any?
-        h1 There are some mistakes
     .form-group
         = f.label :name, class: label_class
         = f.text_field :name, class: input_class
@@ -13,5 +11,8 @@
     .form-group
         = f.label :category, class: label_class
         = f.select :category_id, categories.pluck(:name, :id), {} , { class: "border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:border-gray-600 dark:placeholder-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500" }
+    .form-group
+        = f.label "Social Network", class: label_class
+        = f.select :social, [["WhatsApp", "WhatsApp"], ["Telegram", "Telegram"]], {} , { class: "border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:border-gray-600 dark:placeholder-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500" }
     div class="my-4"
         = f.submit class: button_class
