--- a/app/views/communities/edit.html.slim
+++ b/app/views/communities/edit.html.slim
@@ -1,6 +1,6 @@
-h1 class=""
+h1 class="text-3xl text-center my-6 text-white underline"
     ' Edit your community:
     = community.name
 
-
-        = render "form"
+div class="max-w-lg bg-white m-auto p-5 rounded"
+    = render "form"
