--- a/app/views/communities/show.html.slim
+++ b/app/views/communities/show.html.slim
@@ -1,9 +1,8 @@
 div class="text-white max-w-xl m-auto flex flex-col my-5 h-full justify-center gap-[20px] my-[50px]"
   h1 class="text-center text-3xl font-bold"
     = community.name
-  div
-      p
-          = community.description
+  p class="block"
+    = community.description
   table class="border"
     thead class="border"
       tr
