--- a/app/views/communities/_community_body.html.slim
+++ b/app/views/communities/_community_body.html.slim
@@ -1,7 +1,7 @@
 article class="bg-slate-100 rounded p-4 flex flex-col gap-3 w-full"
   h2 class="text-center text-3xl"
     = community.name
-  p class=""
+  p class="w-full"
     = community.description
   div class="mt-3 flex gap-3" 
     = link_to "see more", community, class: button_class
