added styles for login and register pages

--- a/app/views/communities/show.html.slim
+++ b/app/views/communities/show.html.slim
@@ -1,7 +1,7 @@
-div class="text-white max-w-xl m-auto flex flex-col my-5 h-full justify-center gap-[20px] my-[50px]"
+Pdiv class="text-white max-w-xl m-auto flex flex-col my-5 h-full justify-center gap-[20px] my-[50px]"
   h1 class="text-center text-3xl font-bold"
     = community.name
-  p class="block"
+  p class="block" style="word-break: break-all;"
     = community.description
   table class="border"
     thead class="border"
