added new search ransack in admin communities

--- a/app/views/admin/communities/_community.html.slim
+++ b/app/views/admin/communities/_community.html.slim
@@ -1,4 +1,4 @@
 = turbo_frame_tag community do
-  h1 class="text-3xl text-center font-bold"
-    = community.url
-  = link_to "delete", admin_community_path(community), data: { turbo_method: :delete }
+  h1 class="text-xl text-white"
+    = community.user.email
+  = render "communities/community_body", community: community
