--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -7,5 +7,5 @@
 div class="flex gap-5 justify-center"
     div class="flex justify-center items-center"
         = render "form", user: @user
-    div
+    div class="hidden lg:block"
         = image_tag("astronaut.png")
