--- a/app/views/admin/communities/index.html.slim
+++ b/app/views/admin/communities/index.html.slim
@@ -1,3 +1,9 @@
 = turbo_frame_tag "admin-commnunities" do
-  - communities.each do |community|
-    = render "community", community: community
+  div
+    = search_form_for @q, class: "flex justify-center my-5 gap-5", url: admin_communities_path do |f|
+      = f.search_field :user_email_cont, placeholder: "Search by user"
+      = f.search_field :created_at_date_equals, placeholder: "search by date", html: {datepicker: true}
+      = f.submit class: button_class
+  div class="flex flex-col gap-5 max-w-xl m-auto"
+    - @communities.each do |community|
+      = render "community", community: community
