--- a/app/views/communities/_community_body.html.slim
+++ b/app/views/communities/_community_body.html.slim
@@ -3,9 +3,11 @@ article class="bg-slate-100 rounded p-4 flex flex-col gap-3 w-full"
     = community.name
   p style="word-break: break-all;"
     = community.description
-  div class="mt-3 flex gap-3" 
+  div class="mt-3 flex gap-3 flex-wrap" 
     = link_to "see more", community, class: button_class
     - if allowed_to?(:edit?, community)
-      = link_to "edit", edit_community_path(community), class: button_class
+      = link_to "edit", edit_community_path(community), class: "#{button_class} bg-green-900 text-white hover:bg-green-800" 
     - if allowed_to?(:destroy?, community)
-      = link_to "delete", community_path(community), data: { turbo_method: :delete }, class: button_class
+      = link_to "delete", community_path(community), data: { turbo_method: :delete, turbo_confirm: "Are You sure?" }, class: "#{button_class} bg-red-800 hover:bg-red-700"
+    - if current_user.admin?
+      = link_to "Delete as admin", admin_community_path(community), data:{ turbo_method: :delete }, class: "#{button_class} bg-red-800 hover:bg-red-700"
