--- a/app/views/layouts/_flash.html.slim
+++ b/app/views/layouts/_flash.html.slim
@@ -1,6 +1,5 @@
-div
+div class="flex flex-col justify-center items-center my-3"
   - flash.each do |type, msg|
-    div class="container"
-      div class="validation-error alert alert-<%= type %> mx-5 my-3"
+    div class="bg-slate-100 rounded min-w-xl py-[5px]"
+      div class="-<%= type %> mx-5 my-3"
         = msg
-
